--- a/src/index.html
+++ b/src/index.html
@@ -23,230 +23,236 @@
 </head>
 
 <body>
-  <main>
-    <header>
-      <div class="container bg-light">
 
-        <!-- NAVBAR -->
-        <nav class="navbar navbar-expand-lg navbar-light">
-          <a href="" class="navbar-brand">
-            <img src="http://via.placeholder.com/200x40" alt="">
-          </a>
-          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
-              <li class="nav-item">
-                <a class="nav-link navbar--link" href="#">Home <span class="sr-only">(current)</span></a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link navbar--link" href="#">About</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link navbar--link" href="#">Blog</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link navbar--link" href="#">Testimonials</a>
-              </li>
-            </ul>
-            <span class="">
-              <a class="btn btn-primary">Contact Us</a>
-            </span>
-          </div>
-        </nav>
+  <header>
+    <div class="container bg-light">
 
-        <!-- HEADER, BUTTONS, IMAGE -->
-        <div class="">
-          <h1 class="">Search Engine optimisation &amp; Marketing.</h1>
-          <p>Simple is a simple template with a creative design that solves all your marketing and SEO queries.</p>
+      <!-- NAVBAR -->
+      <nav class="navbar navbar-expand-lg navbar-light">
+        <a href="" class="navbar-brand">
+          <img src="http://via.placeholder.com/200x40" alt="">
+        </a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+          aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav mx-auto font-weight-bold">
+            <li class="nav-item">
+              <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">About</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Blog</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Testimonials</a>
+            </li>
+          </ul>
+          <span class="">
+            <a class="btn btn-primary">Contact Us</a>
+          </span>
         </div>
-        <div class="row">
-          <div class="col-6">
-            <a class="btn btn-primary">Get Started</a>
-          </div>
-          <div class="col-6">
-            <a class="btn btn-primary">Learn More</a>
-          </div>
-        </div>
-        <div class="">
-          <img src="http://via.placeholder.com/450x360" class="img-fluid" alt="Responsive image">
-        </div>
+      </nav>
 
+      <!-- HEADER, BUTTONS, IMAGE -->
+      <div class="mt-5 text-center">
+        <h1 class="font-weight-bold w-50 mx-auto">Search Engine optimisation &amp; Marketing.</h1>
+        <p class="text-muted">Simple is a simple template with a creative design that solves all your marketing and SEO
+          queries.</p>
       </div>
-    </header>
+      <div class="row justify-content-center">
+        <div class="col-xs-12 navBtn">
+          <a class="btn btn-primary mr-1 navBtn__link navBtn__link--start">Get Started</a>
+          <a class="btn btn-primary ml-1 navBtn__link navBtn__link--learn">Learn More</a>
+        </div>
+      </div>
+      <img src="http://via.placeholder.com/350x250" class="img-fluid mx-auto d-block mt-5" alt="">
 
+    </div>
+  </header>
+
+  <main>
     <div class="container">
 
       <!-- HOW DOES IT WORKS -->
-      <section class="">
-        <article class="">
+      <section class="mt-6">
+
+        <article class="text-center">
           <h2 class="">How does it works</h2>
-          <p class="">One theme that serves as an easy-to-use operational toolkit that meets customer's needs.</p>
+          <p class="text-muted w-50 mx-auto">One theme that serves as an easy-to-use operational toolkit that meets
+            customer's needs.</p>
         </article>
         <!-- THUMBNAILS -->
-        <article class="">
-          <div class="row">
-            <div class="col-12 col-md-4">
-              <div class="row">
-                <img src="http://via.placeholder.com/140x140" alt="" class="img-thumbnail">
-              </div>
-              <div class="row">
-                <h4 class="">Speed Optimisation</h4>
-                <p class="">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ducimus veniam corrupti corporis.
-                </p>
-                <a class="" href="">Read more</a>
-              </div>
-            </div>
-            <div class="col-12 col-md-4">
-              <div class="row">
-                <img src="http://via.placeholder.com/140x140" alt="" class="img-thumbnail">
-              </div>
-              <div class="row">
-                <h4 class="">SEO and Backlinks</h4>
-                <p class="">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ducimus veniam corrupti corporis.
-                </p>
-                <a class="" href="">Read more</a>
-              </div>
-            </div>
-            <div class="col-12 col-md-4">
-              <div class="row">
-                <img src="http://via.placeholder.com/140x140" alt="" class="img-thumbnail">
-              </div>
-              <div class="row">
-                <h4 class="">Content Marketing</h4>
-                <p class="">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ducimus veniam corrupti corporis.
-                </p>
-                <a class="" href="">Read more</a>
-              </div>
-            </div>
+        <div class="row mt-5 justify-content-center justify-content-md-between thumbnail">
+          <div class="col-8 col-md-4 col-lg-3 text-md-left text-center">
+            <img src="http://via.placeholder.com/64x64" alt="" class="img-thumbnail">
+            <h4 class="mt-2 w-md-50">Speed Optimisation</h4>
+            <p class="mt-3 text-muted">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ducimus veniam corrupti
+              corporis.
+            </p>
+            <a class="thumbnail__link thumbnail__link--grey" href="">Readmore</a>
           </div>
-        </article>
+
+          <div class="col-8 col-md-4 col-lg-3 text-md-left text-center thumbnail">
+            <img src="http://via.placeholder.com/64x64" alt="" class="img-thumbnail">
+            <h4 class="mt-2 w-md-50">SEO and Backlinks</h4>
+            <p class="mt-3 text-muted">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ducimus veniam corrupti
+              corporis.
+            </p>
+            <a class="thumbnail__link thumbnail__link--grey" href="">Readmore</a>
+          </div>
+
+          <div class="col-8 col-md-4 col-lg-3 text-md-left text-center thumbnail">
+            <img src="http://via.placeholder.com/64x64" alt="" class="img-thumbnail">
+            <h4 class="mt-2 w-md-50">Content Marketing</h4>
+            <p class="mt-3 text-muted">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ducimus veniam corrupti
+              corporis.
+            </p>
+            <a class="thumbnail__link thumbnail__link--grey" href="">Readmore</a>
+          </div>
+        </div>
+
       </section>
 
       <!-- MIDDLE SECTION -->
-      <section class="">
-        <article class="">
-          <div class="row">
-            <div class="col-12 col-md-6">
-              <h2 class="">We Offer a Full Range of Digital Marketing Service</h2>
-              <p class="">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eaque assumenda iusto voluptate.</p>
-              <p class="">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quas, quaerat.</p>
-            </div>
-            <div class="col-12 col-md-6">
-              <img src="http://via.placeholder.com/400x340" class="img-fluid" alt="Responsive image">
-            </div>
-          </div>
-        </article>
+      <section class="mt-6">
 
-        <article class="">
-          <div class="row">
-            <div class="col-12 col-md-6">
-              <img src="http://via.placeholder.com/400x340" class="img-fluid" alt="Responsive image">
-            </div>
-            <div class="col-12 col-md-6">
-              <h2 class="">Leading Digital Agency For Businnes Solution.</h2>
-              <p class="">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum totam aperiam cumque vero
-                fugiat eligendi quae adipisci?</p>
-              <p class="">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Reiciendis et inventore nemo?</p>
-              <button type="button" class="btn btn-primary">Read More</button>
+        <div class="row text-md-left text-center">
+          <!-- LEFT COL - TEXT AND IMG -->
+          <div class="col-12 col-md-5 align-self-end">
+            <!-- LEFT TEXT -->
+            <h2 class="">We Offer a Full Range of&nbsp;Digital Marketing Services!</h2>
+            <p class="text-muted mt-3 w-md-80">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eaque assumenda
+              iusto voluptate.</p>
+            <p class="text-muted font-weight-bold w-md-80">Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+              Quas, quaerat.</p>
+            <!-- LEFT IMG -->
+            <div class="text-md-right">
+              <img src="http://via.placeholder.com/380x350" class="img-fluid mt-5" alt="Responsive image">
             </div>
           </div>
-        </article>
+
+          <!-- RIGHT COL - TEXT AND IMG -->
+          <div class="col-12 col-md-5 offset-md-2">
+            <!-- RIGHT IMG -->
+            <img src="http://via.placeholder.com/380x350" class="img-fluid" alt="Responsive image">
+            <!-- RIGHT TEXT -->
+            <h2 class="mt-5">Leading Digital Agency for&nbsp;Businnes Solution.</h2>
+            <p class="text-muted mt-3 w-md-80">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum totam
+              aperiam
+              cumque vero
+              fugiat eligendi quae adipisci?</p>
+            <p class="text-muted font-weight-bold w-md-80">Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+              Reiciendis et inventore nemo?</p>
+            <button type="button" class="btn btn-primary">Readmore</button>
+          </div>
+        </div>
+
       </section>
 
       <!-- CASE STUDIES -->
-      <section class="">
+      <section class="mt-6 text-center">
         <article class="">
           <h2 class="">Our Case studies</h2>
-          <p class="">Lorem ipsum dolor sit amet consectetur adipisicing.</p>
+          <p class="text-muted">Lorem ipsum dolor sit amet consectetur adipisicing.</p>
         </article>
 
-        <article class="">
-          <div class="row">
-            <div class="col-6 col-md-3">
-              <img src="http://via.placeholder.com/200x200" alt="" class="img-thumbnail">
-              <h6 class="mt-3">Online Marketing</h6>
-              <p class="">Seo, Marketing</p>
-            </div>
-            <div class="col-6 col-md-3">
-              <img src="http://via.placeholder.com/200x200" alt="" class="img-thumbnail">
-              <h6 class="mt-3">Web Development</h6>
-              <p class="">Development, Designing</p>
-            </div>
-            <div class="col-6 col-md-3">
-              <img src="http://via.placeholder.com/200x200" alt="" class="img-thumbnail">
-              <h6 class="mt-3">Web Designing</h6>
-              <p class="">Designing, Developing</p>
-            </div>
-            <div class="col-6 col-md-3">
-              <img src="http://via.placeholder.com/200x200" alt="" class="img-thumbnail">
-              <h6 class="mt-3">Software Development</h6>
-              <p class=""> Developing, Designing</p>
-            </div>
+        <div class="row mt-5">
+          <div class="col-6 col-md-3">
+            <img src="http://via.placeholder.com/200x200" alt="" class="img-thumbnail">
+            <h6 class="mt-3">Online Marketing</h6>
+            <p class="text-muted">Seo, Marketing</p>
           </div>
-        </article>
+
+          <div class="col-6 col-md-3">
+            <img src="http://via.placeholder.com/200x200" alt="" class="img-thumbnail">
+            <h6 class="mt-3">Web Development</h6>
+            <p class="text-muted">Developing, Designing</p>
+          </div>
+
+          <div class="col-6 col-md-3">
+            <img src="http://via.placeholder.com/200x200" alt="" class="img-thumbnail">
+            <h6 class="mt-3">Web Designing</h6>
+            <p class="text-muted">Designing, Developing</p>
+          </div>
+
+          <div class="col-6 col-md-3">
+            <img src="http://via.placeholder.com/200x200" alt="" class="img-thumbnail">
+            <h6 class="mt-3">Software Development</h6>
+            <p class="text-muted"> Developing, Designing</p>
+          </div>
+        </div>
       </section>
 
       <!-- OUR CUSTOMERS -->
-      <section class="">
+      <section class="mt-6 text-center">
         <article class="">
           <h2 class="">What our customers have to say</h2>
-          <p>Lorem ipsum dolor, sit amet consectetur adipisicing.</p>
+          <p class="text-muted font-weight-bold">Lorem ipsum dolor, sit amet consectetur adipisicing.</p>
         </article>
 
-        <article class="">
-          <div class="row">
-            <div class="col-12 col-md-4">
-              <div class="card">
-                <img src="http://via.placeholder.com/75x75" class="card-img-top rounded-pill" alt="">
-                <div class="card-body">
-                  <p class="card-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tempora quos tenetur iste.</p>
-                  <div class=""></div>
-                </div>
-                <h6 class="card-title">Cody Lambert</h6>
-                <p class="text-muted">Marketing Manager</>
+        <div class="row mt-5">
+          <div class="col-12 col-md-4">
+            <div class="card bg-light">
+              <img src="http://via.placeholder.com/75x75" class="card-img-top rounded-pill w-25 mx-auto" alt="">
+              <div class="card-body">
+                <p class="card-text text-muted">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tempora quos
+                  tenetur
+                  iste.</p>
               </div>
-            </div>
-            <div class="col-12 col-md-4">
-              <div class="card">
-                <img src="http://via.placeholder.com/75x75" class="card-img-top rounded-pill" alt="">
-                <div class="card-body">
-                  <p class="card-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tempora quos tenetur iste.</p>
-                  <div class=""></div>
-                </div>
-                <h6 class="card-title">Cody Lambert</h6>
-                <p class="text-muted">Marketing Manager</>
-              </div>
-            </div>
-            <div class="col-12 col-md-4">
-              <div class="card">
-                <img src="http://via.placeholder.com/75x75" class="card-img-top rounded-pill" alt="">
-                <div class="card-body">
-                  <p class="card-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tempora quos tenetur iste.</p>
-                  <div class=""></div>
-                </div>
-                <h6 class="card-title">Tony Martinez</h6>
-                <p class="text-muted">Marketing Manager</>
-              </div>
+              <div class="card__underline card__underline--black"></div>
+              <h6 class="card-title">Cody Lambert</h6>
+              <p class="text-muted font-weight-bold negmt-1">Marketing Manager</>
             </div>
           </div>
-        </article>
+
+          <div class="col-12 col-md-4">
+            <div class="card bg-light">
+              <img src="http://via.placeholder.com/75x75" class="card-img-top rounded-pill w-25 mx-auto" alt="">
+              <div class="card-body">
+                <p class="card-text text-muted">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tempora quos
+                  tenetur
+                  iste.</p>
+              </div>
+              <div class="card__underline card__underline--orange"></div>
+              <h6 class="card-title">Cody Lambert</h6>
+              <p class="text-muted font-weight-bold negmt-1">Marketing Manager</>
+            </div>
+          </div>
+
+          <div class="col-12 col-md-4">
+            <div class="card bg-light">
+              <img src="http://via.placeholder.com/75x75" class="card-img-top rounded-pill w-25 mx-auto" alt="">
+              <div class="card-body">
+                <p class="card-text text-muted">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tempora quos
+                  tenetur
+                  iste.</p>
+              </div>
+              <div class="card__underline card__underline--black"></div>
+              <h6 class="card-title">Tony Martinez</h6>
+              <p class="text-muted font-weight-bold negmt-1">Marketing Manager</>
+            </div>
+          </div>
+        </div>
+
       </section>
 
       <!-- CONTACT US -->
-      <section class="">
+      <section class="mt-6 text-center">
+
         <article class="">
-          <div class="card bg-dark text-white">
+          <div class="card text-black">
             <img src="http://via.placeholder.com/500x100" class="card-img" alt="...">
             <div class="card-img-overlay">
-              <h3 class="card-title">Do you have any projects?</h3>
-              <h3 class="card-text">Contact us</h3>
+              <h3 class="card-title">Do you have any projects? Contact us</h3>
               <a class="btn btn-primary">Contact Us</a>
             </div>
           </div>
         </article>
+
       </section>
 
     </div>
@@ -260,6 +266,7 @@
           <p class="">mikayla_beer@feil.name</p>
           <p class="">906-179-8309</p>
         </div>
+
         <div class="col-6 col-md-3">
           <h6 class="">Get In Touch</h6>
           <p>Don't miss any updates of our new templates and extenstions</p>
@@ -269,6 +276,7 @@
           </div>
           <button type="button" class="btn btn-primary">Subscribe</button>
         </div>
+
         <div class="col-6 col-md-3">
           <h6 class="">Our Guidelines</h6>
           <ul class="">
@@ -278,6 +286,7 @@
             <li class="">Discover</li>
           </ul>
         </div>
+
         <div class="col-6 col-md-3">
           <h6 class="">Our address</h6>
           <p>518 Schmeler Neck Bartlett, Illinois</p>
