--- a/src/index.html
+++ b/src/index.html
@@ -164,25 +164,25 @@
 
         <div class="row mt-5">
           <div class="col-6 col-md-3">
-            <img src="http://via.placeholder.com/200x200" alt="" class="img-thumbnail">
+            <img src="http://via.placeholder.com/250x250" alt="" class="img-thumbnail">
             <h6 class="mt-3">Online Marketing</h6>
             <p class="text-muted">Seo, Marketing</p>
           </div>
 
           <div class="col-6 col-md-3">
-            <img src="http://via.placeholder.com/200x200" alt="" class="img-thumbnail">
+            <img src="http://via.placeholder.com/250x250" alt="" class="img-thumbnail">
             <h6 class="mt-3">Web Development</h6>
             <p class="text-muted">Developing, Designing</p>
           </div>
 
           <div class="col-6 col-md-3">
-            <img src="http://via.placeholder.com/200x200" alt="" class="img-thumbnail">
+            <img src="http://via.placeholder.com/250x250" alt="" class="img-thumbnail">
             <h6 class="mt-3">Web Designing</h6>
             <p class="text-muted">Designing, Developing</p>
           </div>
 
           <div class="col-6 col-md-3">
-            <img src="http://via.placeholder.com/200x200" alt="" class="img-thumbnail">
+            <img src="http://via.placeholder.com/250x250" alt="" class="img-thumbnail">
             <h6 class="mt-3">Software Development</h6>
             <p class="text-muted"> Developing, Designing</p>
           </div>
@@ -277,7 +277,7 @@
           <p class="mt-3">mikayla_beer@feil.name <br> 906-179-8309</p>
         </div>
 
-        <div class="col-6 col-md-3">
+        <div class="col-6 col-md-3 mb-3">
           <h5 class="">Get In Touch</h5>
           <p class="text-muted mt-3">Don't miss any updates of our new templates and extenstions!</p>
           <label for="emailId" hidden></label>
@@ -313,9 +313,9 @@
         </div>
       </div>
 
-      <hr class="mt-6">
+      <hr class="mt-5">
 
-      <p class="text-center text-muted">Copyright &copy; 2019 <span class="">Boostrapdash.</span> All rights reserved</p>
+      <p class="text-center text-muted">Copyright &copy; 2019 <span class="footer__p--orange">Boostrapdash.</span> All rights reserved</p>
 
     </div>
   </footer>
